--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -6,6 +6,10 @@
     <md-button href="#" class="md-raised">Home</md-button>
     <md-button href="#" class="md-raised">About</md-button>
     <md-button href="#" class="md-raised">Contact</md-button>
+    <md-button href="/#/formly" class="md-raised">Formly</md-button>
+    <md-button href="/#/theme" class="md-raised">Theme</md-button>
+    <md-button href="/#/layout" class="md-raised">Layout</md-button>
+    <md-button href="/#/echarts" class="md-raised">Echarts</md-button>
   </section>
 
   <md-button class="acme-navbar-text">Application was created {{ vm.relativeDate }}.</md-button>
